# quarterly

./: .env.development  .gitignore  Makefile  README.md  pyproject.toml
src/quarterly/: analyst.py  api.py  cli.py  config.py  configs.py  ingestor.py  main.py  ollama.py  schemas.py
tests/: test_main.py
